--- a/abertura.html
+++ b/abertura.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abertura</title>
 </head>
 <body>
-    <h1>Starwars</h1>
+    <h1>Abertura</h1>
     
 </body>
 </html>
