--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    
+    <title>Principal</title>
 </head>
 <body>
-    <h1>Starwars</h1>
-    
+    <div id="indexTex">
+        <h1>A long time ago in a galaxy far, far away...</h1>
+    </div>     
+
+    <script src="./js/main.js" type="text/javascript"></script>
 </body>
 </html>
