--- a/jedi.html
+++ b/jedi.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jedi</title>
 </head>
 <body>
-    <h1>Starwars</h1>
-    
+    <h1>Jedi</h1>
+    <p id="loading">Carregando...</p>
+    <div id="people-container"></div>
+
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
