sexto commit construindo paginas

--- a/abertura.html
+++ b/abertura.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abertura</title>
+    <title>Star Wars</title>
+    <link rel="stylesheet" href="../starwars-main/css/abertura.css">
 </head>
 <body>
-    <h1>Abertura</h1>
+    <div id="container">
+        <section class="star-wars">
+            <div class="crawl">
+                <div class="title">
+                    <p>Episódio I</p>
+                    <h1>A AMEAÇA FANTASMA</h1>
+                </div>
+
+                <p>A República Galáctica está em grande tumulto. Em disputa estão os impostos sobre as rotas comerciais para os sistemas estelates exteriores.</p>
+                <p>Na esperança de resolver o assunto com um bloqueio de implacáveis naves de guerra, a gananciosa federação de comécio, interrompe todos os carregamentos para o pequeno planeta Naboo.</p>
+                <p>Enquanto o Congresso da República debate incessantemente esta alarmante cadeia de acontecimentos, o Supremo Chanceler mandava secretamente dois Cavaleiros Jedi, guardiões da paz e da justiça na galáxia, para resolver o conflito... </p>
+            </div>
+
+
+        </section>
+    </div>
+   
     
 </body>
 </html>
