--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
     <title>Principal</title>
 </head>
 <body>
-    <div id="indexTex">
-        <h1>A long time ago in a galaxy far, far away...</h1>
-    </div>     
+    <h1>Index</h1>
+    <li><a href="./menu.html">Menu</a></li>
+        
+    
+    <main class="container">
+        <p id="nome"></p>
+        <p id="altura"></p>
+    </main>
+    <main class="container">
+        <p id="nome2"></p>
+        <p id="altura2"></p>
+    </main>
+
 
     <script src="./js/main.js" type="text/javascript"></script>
 </body>
