--- a/menu.html
+++ b/menu.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <title>Principal</title>
 </head>
+
 <body>
-    <h1>Menu</h1>
-    
+    <main>
+        <div class="mainMenu">
+            <div class="banner">
+                <img src=".img/banner_jedy_sith.png" alt="yelow">
+            </div>
+            <h1 class="teamText">Choose your team:</h1>
+            <div class="btn">
+                <a href="/jedi.html"><img src=".img/logo_jedi.png" class="jedi"></a>
+                <a href="/sith.html"><img src=".img/logo_sith.png" class="sith"></a>
+            </div>
+            <div class="btn">
+                <h1 class="jediText">Jedi</h1>
+                <h1 class="sithText">Sith</h1>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
